--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -16,7 +16,8 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!--<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
+    <script type="text/javascript" src="{% static 'main/js_libs/jquery-3.1.1.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'main/js/materialize.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'main/js/checkWaitingDevices.js' %}"></script>
 </head>
