--- a/main/templates/main/device_detail_tabs.html
+++ b/main/templates/main/device_detail_tabs.html
@@ -1,6 +1,10 @@
 <ul id="tabs-swipe-demo" class="tabs custom-tabs z-depth-1 blue-grey darken-1">
-    <li class="tab col "><a class="active" href="#test-swipe-1">Test 1</a></li>
-    <li class="tab col "><a href="#test-swipe-2">Test 2</a></li>
-    <li class="tab col "><a href="#test-swipe-3">Test 3</a></li>
+    {% for value in actual_values %}
+        <li class="tab col"><a href="#tab-{{ value.name }}">{{ value.value_type|capfirst }}</a></li>
+    {% endfor %}
+
+{#    <li class="tab col "><a class="active" href="#test-swipe-1">Test 1</a></li>#}
+{#    <li class="tab col "><a href="#test-swipe-2">Test 2</a></li>#}
+{#    <li class="tab col "><a href="#test-swipe-3">Test 3</a></li>#}
 </ul>
 
