--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -27,12 +27,12 @@
     {% include "main/navbar.html" %}
 {% endblock %}
 
-
-<div class="container bsa">
-    {% block content %}
-    {% endblock %}
-</div>
-
+<main>
+    <div class="container bsa">
+        {% block content %}
+        {% endblock %}
+    </div>
+</main>
 
 </body>
 </html>
