--- a/main/templates/main/display_preview_card.html
+++ b/main/templates/main/display_preview_card.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="card-image">
 
+        {# circular loader #}
         <div id="circle-loader" hidden>
             <div class='preloader-wrapper active'>
                 <div class='spinner-layer spinner-blue-only'>
@@ -16,6 +17,8 @@
                 </div>
             </div>
         </div>
+
+        {# plot preview #}
         <div id="plot-preview">
 
         </div>
