fix problem with parsing Hello message and validating waiting devices

--- a/EspHubServer/main/templates/main/waiting_device_modal.html
+++ b/EspHubServer/main/templates/main/waiting_device_modal.html
@@ -62,7 +62,7 @@
 
     <div class="modal-footer">
         <a class="modal-action waves-effect waves-green btn-flat "
-           onclick="saveDevice({{ id }}, {{ abilities|length }})">
+           onclick="saveDevice('{{ id }}', {{ abilities|length }})">
             <i class="material-icons right">done</i>
             Add device
         </a>
