fix #31 and related problem with invalid inserting Telemetry into DB; add indication of offline state on main page

--- a/EspHubServer/main/templates/main/index.html
+++ b/EspHubServer/main/templates/main/index.html
@@ -13,6 +13,7 @@
     {% load static %}
     <script type="text/javascript" src="{% static 'main/js/checkDeviceState.js' %}"></script>
     <script type="text/javascript">
+        var connected = true;
         $(document).ready(checkDeviceState("{{ devices_json|escapejs }}", "/api/telemetry/", {{ time_to_live }}));
     </script>
 {% endblock %}
