--- a/EspHubServer/main/templates/main/device_detail.html
+++ b/EspHubServer/main/templates/main/device_detail.html
@@ -45,8 +45,9 @@
         {% for value in actual_values %}
             <div id="tab-{{ value.name }}" class="col s12 grey lighten-4">
                 <div style="width: 100%;">
-                    <canvas id="canvas-tab-{{ value.name }}" data-url="{% url 'main:records_api' device.id value.name %}"
-                            height="150"></canvas>
+{#                    <canvas id="canvas-tab-{{ value.name }}" data-url="{% url 'main:records_api' device.id value.name %}"#}
+{#                            height="150"></canvas>#}
+                    <div id="canvas-tab-{{ value.name }}" style="width: 100%;height:600px;" data-url="{% url 'main:records_api' device.id value.name %}"></div>
                 </div>
             </div>
         {% endfor %}
@@ -54,7 +55,10 @@
     </div>
 
     {% load static %} {# load javascript #}
+    {#    import ChartJS plot library#}
     <script type="text/javascript" src="{% static 'main/js_libs/Chart.bundle.js' %}"></script>
+    {#    import eChart plot library#}
+    <script type="text/javascript" src="{% static 'main/js_libs/echarts.common.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'main/js_libs/moment.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'main/js/jquery.cookie.js' %}"></script>
     <script type="text/javascript" src="{% static 'main/js/updateDeviceStatus.js' %}"></script>
